--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
 }
 
 p{
-    font-size: 20px;
+    font-size: 30px;
 }
 
 a{
@@ -18,73 +18,85 @@ a{
 
 #header{
     display: flex;
-    gap: 10px;
+    flex-direction: row;
+    gap: 5px;
     background-color: rgb(241, 225, 225);
     text-align: center;
-
+    justify-content: space-around;
+    flex-wrap: wrap;
+    align-content: center;
 }
 
-.title{
-    width: 100%;
+
+.topic a:hover{
+    background-color: rgb(246, 255, 232);
+}
+
+
+
+.box{
+    flex-wrap: wrap;
+    align-content: center;
 }
 
 h1 {
     text-align: center;
     color: rgb(242, 0, 0);
-    font-size: 3rem;
+    font-size: 4rem;
    
    
 }
 
 h2{
     text-align: center;
-    font-size: 2rem;
+    font-size: 3rem;
 
 }
 
 h3{
-    font-size:22px ;
+    font-size:2rem ;
 }
 
-li{
-    font-size:18px;
-    list-style-type: none;
-    
-   
-}
-
-#content {
-    text-decoration: none;
+#content{
     display: flex;
-    gap: 20px;
-    text-align: center;
- 
+    flex-direction: row;
+    gap: 10px;
+    flex-wrap: wrap;
+    justify-content: center;
+    
 }
 
 .topic{
-    background-color: rgb(155, 217, 155);
-    padding: 30px;
+    background-color: rgb(210, 230, 210);
     text-align: center;
-    
-    width: 100%;
-}
-
-.boxofcontent{
-    text-align: center;
+    padding: 50px;
 }
 
 
-@media (min-width:200px) and (max-width: 700px) {
+
+@media (min-width:10px) and (max-width: 480px) {
     body{
-   
+    max-width: 80%;
       background-color: wheat;
       display: inline-block; 
+      margin-right: 50px;
     }
-    h3{
-        text-align: center;
-    }
+
     #content{
-        display:inline-block;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+    
+
         
     }
+
+    .topic{
+        background-color: rgb(210, 230, 210);
+        text-align: center;
+        padding:10px;
+        margin:1%;
+    }
+    
 }
